Few Sonar fixes